fixed spacing in text and added shadow on main page title box

--- a/css/style.css
+++ b/css/style.css
@@ -79,7 +79,7 @@ nav li {
 nav a {
   text-decoration: none;
   color: var(--rosy-brown);
-  padding-left: 5rem;
+  margin-left: 5rem;
 }
 
 nav a:hover {
