--- a/css/welcome-page.css
+++ b/css/welcome-page.css
@@ -27,21 +27,22 @@
     display: flex;
     top: 1rem;
     flex-direction: column;
-    justify-content: start;
-    /* align-items: left; */
-    width: 12.5rem;
     height: auto;
+    left: -2px;
 }
 
 .hero-title {
     align-items: center;
+    justify-content: center;
     font-size: 1.7rem;
     font-weight: bold;
     color: var(--moss-green);
     background: rgb(255,255,255);
     background: rgba(255, 255, 255,0.7);
-    padding: .5rem;
-    border-radius: 0 50px 50px 0;
+    padding: 1rem;
+    border-radius: 10px 50px 50px 10px;
+    border-left: solid 7px var(--moss-green);
+    box-shadow: 0px 10px 5px gray;
 }
 
 .hero-text-container {
